Conexion base de datos

--- a/Noticias/pom.xml
+++ b/Noticias/pom.xml
@@ -11,4 +11,12 @@
         <maven.compiler.target>23</maven.compiler.target>
         <exec.mainClass>com.noticiero.noticias.Noticias</exec.mainClass>
     </properties>
+    
+      <dependencies>
+           <dependency>
+      <groupId>com.oracle.ojdbc</groupId>
+      <artifactId>ojdbc10</artifactId>
+      <version>19.3.0.0</version>
+    </dependency>
+    </dependencies>
 </project>
