--- a/Noticias/pom.xml
+++ b/Noticias/pom.xml
@@ -18,5 +18,18 @@
       <artifactId>ojdbc10</artifactId>
       <version>19.3.0.0</version>
     </dependency>
+    
+      <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+        </dependency>
+        
+             <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.0.0.Final</version>
+        </dependency>
+        
     </dependencies>
 </project>
