--- a/Noticias/pom.xml
+++ b/Noticias/pom.xml
@@ -31,5 +31,11 @@
             <version>6.0.0.Final</version>
         </dependency>
         
+        <dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.6.2</version>
+       </dependency>
+
     </dependencies>
 </project>
